[package]
name = "roaring-bloom-filter"
version = "0.1.0"
authors = ["oliverdding <oliverdding@outlook.com>"]
edition = "2021"
description = "bloom filter implementation in rust with roaring-bitmap"
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/oliverdding/roaring-bloom-filter-rs"
repository = "https://github.com/oliverdding/roaring-bloom-filter-rs"
keywords = ["bloom-filter", "algorithms", "roaring-bitmap", "datastructure"]

[dependencies]
roaring = "0.8.1"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
